--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="ja">
 	<body>
+
 		<p>Let's team develop</p>
+		<a href="https://www.sejuku.net/blog/104948">おすすめのサイト</a>
 	</body>
 </html>
